[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/TaskInstance.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 12, 16 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 24, 48 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 36, 32 )

[node name="TaskArea" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HorizontalOverlap" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VerticalOverlap" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_TaskArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TaskArea_body_exited"]
